[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.3"
actix-cors = "0.5.4"

serde = "1.0.136"
serde_json = "1.0.78"
actix-web-actors = "3"