[package]
edition = "2021"
name = "rustknock-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-web = "3.3.3"
actix-web-actors = "3"

build_timestamp = "0.1.0"
serde = "1.0.136"
serde_json = "1.0.78"
