[package]
edition = "2021"
name = "rustknock-frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"

ws_stream_wasm = "0.7.3"
futures = "0.3.19"
pharos = "0.5.3"
wasm-bindgen-futures = "0.4.29"
log = "0.4.14"
wasm-bindgen = "0.2.79"
wasm-bindgen-test = "0.3.29"
gloo-utils = "0.1.2"
web-sys = "0.3.56"
wasm-logger = "0.2.0"
